modules/gdscript/tests/scripts/parser/errors/annotation_deprecated.gd
# This annotation should be used within a documentation comment instead:
# ## @deprecated: Reason here.

@deprecated
var some_variable = "value"
